# agent-core

./: AGENTS.md  README.md  main.py  pyproject.toml
openspec/changes/archive/2025-12-10-add-dev-tooling/: proposal.md  tasks.md
openspec/changes/archive/2025-12-10-add-dev-tooling/specs/development-tooling/: spec.md
openspec/specs/development-tooling/: spec.md
